[B] Fix alignment in backend secondary nav
[Fixes #303]

--- a/client/src/theme/Components/backend/_panel.scss
+++ b/client/src/theme/Components/backend/_panel.scss
@@ -95,7 +95,7 @@
 
       a {
         display: block;
-        padding: 12px 0 14px;
+        padding: 13px 0 13px;
         font-size: 14px;
       }
     }
